PR 34361: Contextualmenu: Fix scrollbar appearing
 - fixed an issue where the scroll bar would appear
 - adding change file

--- a/odsp-shared-react/src/components/EditNav/EditNavContextMenu/EditNavContextMenu.scss
+++ b/odsp-shared-react/src/components/EditNav/EditNavContextMenu/EditNavContextMenu.scss
@@ -5,6 +5,9 @@
     position: relative;
     box-shadow: none;
     border: none;
+    .ms-ContextualMenu-link {
+      height: 36px;
+    }
   }
 }
 
